<?xml version="1.0"?>
<package format="2">
  <name>fsm_bumpgo</name>
  <version>0.0.1</version>
  <description>Bumpgo behavior implemented with an FSM</description>
  <maintainer email="rodrigo.perez@urjc.es">Rodrigo Pérez-Rodríguez</maintainer>
  <license>Apache 2.0</license>

  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
